clusters/games/mclinks/httpproxy.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dynmap
spec:
  virtualhost:
    fqdn: dynmap.lab.brianragazzi.com
    tls:
      secretName: wildcard-cert
      minimumProtocolVersion: "1.2"
  routes:
    - conditions:
      - prefix: /
      services:
        - name: mclinks-svc #.hugo.svc.cluster.local
          port: 8080
    # - conditions:
    #   - prefix: /paper
    #   pathRewritePolicy:
    #     replacePrefix:
    #     - prefix: /paper
    #       replacement: /
    #   services:
    #     - name: paper-svc
    #       port: 80
    # - conditions:
    #   - prefix: /creative1
    #   services:
    #     - name: creative1-svc
    #       port: 80
    #   pathRewritePolicy:
    #     replacePrefix:
    #     - prefix: /creative1
    #       replacement: /
