clusters/games/mclinks/ingress-mclinks.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: minecraft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  rules:
    - host: dynmap.games.ragazzilab.com
      http:
        paths:
          - backend:
              service:
                name: mclinks-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: mclinks-svc
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
          - backend:
              service:
                name: survive1
                port:
                  number: 80
            path: /survive1/(.*)
            pathType: Prefix
          - backend:
              service:
                name: survive2
                port:
                  number: 80
            path: /survive2/(.*)
            pathType: Prefix
          - backend:
              service:
                name: flat
                port:
                  number: 80
            path: /flat/(.*)
            pathType: Prefix
