clusters/games/mclinks/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mclinks
spec:
  podSelector:
    matchLabels:
      app: mclinks
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 8080
